Man page typo (Alexander Todorov)

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -5,7 +5,7 @@ virt-manager - display the virtual machine desktop management tool
 
 =head1 SYNOPSIS
 
-B<virt-viewer> [OPTIONS]
+B<virt-manager> [OPTIONS]
 
 =head1 DESCRIPTION
 
