Fix python 2.5 specific code (Andrew Gillies)

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ Further patches have been submitted by:
   S. Çağlar Onur <caglar-at-pardus-dot-org-dot-tr>
   Claes Strom <cs-at-clabbe-dot-com>
   Mike MacCana <mmaccana-at-au1-dot-ibm-dot-com>
+  Andrew Gillies <anaru-at-main-dot-com>
 
   <...send a patch & get your name here...>
 
