Change "Local VM" and "Remote VM" to "Local virtual machine" and "Remote virtual machine".  To do this, small changes had to be made to the layout and Glade rewrote the whole file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Further patches have been submitted by:
   Claes Strom <cs-at-clabbe-dot-com>
   Mike MacCana <mmaccana-at-au1-dot-ibm-dot-com>
   Andrew Gillies <anaru-at-main-dot-com>
+  Richard Laager <rlaager-at-wiktel-dot-com>
 
   <...send a patch & get your name here...>
 
